<resources>
    <string name="app_name">QuizApp.kt2</string>
    <string name="title_quiz">Quiz</string>
    <string name="title_history">History</string>
    <string name="title_settings">Settings</string>
    <string name="todo">TODO</string>
    <string name="questions_amount">Questions amount :</string>
    <string name="ten">10</string>
    <string name="category">Category</string>
    <string name="difficulty">Difficulty</string>
    <string name="start">start</string>
    <string name="iscorrect">isCorrect</string>
    <string name="falses">False</string>

    <string-array name="category_list">
        <item>All</item>
        <item>Science and Nature</item>
        <item>Science:Computers</item>
        <item>Science:Mathematics</item>
        <item>Mythology</item>
        <item>Sports</item>
        <item>Geography</item>
        <item>History</item>
        <item>Politics</item>
        <item>Art</item>
        <item>Celebrities</item>
        <item>Animals</item>
    </string-array>
    <string-array name="difficulty_list">
        <item>All</item>
        <item>easy</item>
        <item>medium</item>
        <item>hard</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="skip">skip</string>
    <string name="daef">False</string>
    <string name="afeg">True</string>
    <string name="back">back</string>
    <string name="adasfas">good</string>
    <string name="correct_answers">correct Answers</string>
    <string name="result">Result</string>
    <string name="finish">Finish</string>
    <string name="history">History</string>
    <string name="empty">Empty</string>
    <string name="date">21 january 2022 19:48</string>
    <string name="category_">Category: %1$s</string>
    <string name="difficulty_">Difficulty: %1$s</string>
    <string name="correct_answers_">Correct answers: %1$s/%2$s</string>
    <string name="date_format">dd mmm yyyy kk:mm</string>
    <string name="are_you_sure">Вы уверены ,что хотите удалить?</string>



</resources>