<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_quiz">

    <fragment
        android:id="@+id/navigation_quiz"
        android:name="com.example.quizappkt2.kolg.quiz.HomeFragment"
        android:label="@string/title_quiz"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.example.quizappkt2.kolg.history.HistoryFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.quizappkt2.kolg.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_notifications" />
</navigation>