<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".kolg.presentation.QuizFragment">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize">

        <TextView
            android:id="@+id/tv_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="50dp"
            android:fontFamily="@font/quiz_font"
            android:singleLine="true"
            android:textAlignment="center"
            android:textColor="#1A051D"
            android:textSize="17sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|start"
            android:layout_marginStart="24dp"
            android:contentDescription="@string/back"
            android:src="@drawable/arrow_bk" />
    </FrameLayout>

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progress_indicator"
        android:layout_width="175dp"
        android:layout_height="6dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        app:indicatorColor="@color/asda"
        app:trackColor="#A6A6A6" />

    <TextView
        android:id="@+id/tv_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/quiz_font"
        android:textColor="@color/black"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tv_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="61dp"
        android:layout_marginVertical="31dp"
        android:fontFamily="@font/quiz_font"
        android:textAlignment="center"
        android:textColor="#1A051D"
        android:textSize="20sp" />


    <LinearLayout
        android:id="@+id/multiple_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:visibility="gone">

        <Button
            android:id="@+id/btn_1"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:layout_marginHorizontal="50dp"
            android:layout_marginBottom="6dp"
            android:backgroundTint="#6979F8"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btn_2"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:layout_marginHorizontal="50dp"
            android:layout_marginBottom="6dp"
            android:backgroundTint="#4CE2A7"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btn_3"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:layout_marginHorizontal="50dp"
            android:layout_marginBottom="6dp"
            android:backgroundTint="#FF4D4D"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btn_4"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:layout_marginHorizontal="50dp"
            android:textColor="#6979F8" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/true_false_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="43dp"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/btn_1_tf"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:layout_marginHorizontal="50dp"
            android:layout_marginBottom="34dp"
            android:text="@string/afeg"
            android:textColor="#6979F8" />

        <TextView
            android:id="@+id/btn_2_tf"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:layout_marginHorizontal="50dp"
            android:text="@string/falses"
            android:textColor="#6979F8" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_isCorrect"
            android:layout_width="40dp"
            android:layout_height="0dp"
            android:layout_gravity="center|top"
            android:layout_marginVertical="15dp"
            android:layout_weight="1"
            android:contentDescription="@string/iscorrect"
            android:visibility="gone" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/btn_skip"
                android:layout_width="90dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:background="@drawable/bg_skip"
                android:gravity="center"
                android:text="@string/skip"
                android:textColor="@color/white" />
        </FrameLayout>
    </LinearLayout>

</LinearLayout>